--- a/guide.html
+++ b/guide.html
@@ -403,7 +403,7 @@
     <a href="index.html" class="btn">🚀 アプリを起動する</a>
 
     <footer style="margin-top: 60px; text-align: center; color: #6b7280; padding: 20px; border-top: 1px solid #e5e7eb;">
-        <p>© 2025 Image Renamer for LCA - Made with ❤️ | Web版 v1.1.0</p>
+        <p>© 2025 Image Renamer for LCA - Made by Shuho Yamada | Web版 v1.1.0</p>
     </footer>
 </body>
 </html>
